--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: web
-    name: flask-foodfinder
+    name: recipe-restaurant-app
     env: python
     buildCommand: ""
-    startCommand: "python app.py"
+    startCommand: gunicorn app:app
+    plan: free
